More markup after adding .load

--- a/monthlyBudget/monthly-transportation-display.html
+++ b/monthlyBudget/monthly-transportation-display.html
@@ -25,11 +25,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="container my-3">
-    <h3 class="unica-one">Debt & Loans</h3>
+    <div class="container my-3">
+        <h3 class="unica-one">Transportation</h3>
         <div class="form-row">
             <div class="col">
-                <label>Credit Cards:</label>
+                <label>Car Payment:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Student Loans:</label>
+                <label>Car Insurance:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -49,7 +49,7 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <label>Medical Debt:</label>
+                <label>Gas:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Tax Payments:</label>
+                <label>Car Repairs:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -69,7 +69,7 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <label>Store Cards:</label>
+                <label>Parking & Tolls:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Personal Debt:</label>
+                <label>Public Transit:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
