--- a/yearlyBudget/1January/january-monthly-budget.html
+++ b/yearlyBudget/1January/january-monthly-budget.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h2 class="unica-one text-orange"><u>JANUARY</u></h2>
 <div class="accordion" id="tab1Accordion">
+    <h2 class="unica-one text-orange"><u>JANUARY</u></h2>
         <div class="border-top border-bottom border-info my-1" id="headingOne">
             <h2 class="mb-0 border-top border-bottom border-info">
                 <button class="btn btn-link text-info collapse-heading" type="button" data-toggle="collapse"
@@ -38,7 +38,6 @@
                 <div class="card-body border-bottom border-info">
 
                     <!-- INSIDE OF INCOME ACCORDION -->
-                    
                     <form>
                         <div class="form-row">
                             <div class="col-7">
@@ -177,5 +176,8 @@
             </div>
         </div>
     </div>
+    <script src="js/localStorage.js"></script>
+    <script src="js/tabDisplay.js"></script>
+    <script src="js/monthlyExpenses.js"></script>
 </body>
 </html>
