--- a/monthlyBudget/collapses/savings-collapse.html
+++ b/monthlyBudget/collapses/savings-collapse.html
@@ -25,11 +25,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="container my-3">
-    <h3 class="unica-one">Debt & Loans</h3>
+    <div id="savingsCollapseDiv">
         <div class="form-row">
             <div class="col">
-                <label>Credit Cards:</label>
+                <label>Savings(General):</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -38,7 +37,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Student Loans:</label>
+                <label>Emergency Fund:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -49,7 +48,7 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <label>Medical Debt:</label>
+                <label>401k:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -58,7 +57,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Tax Payments:</label>
+                <label>Investments:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -68,28 +67,19 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="col">
-                <label>Store Cards:</label>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroup-sizing-default">$</span>
-                    </div>
-                    <input type="text" class="form-control" id="monthlyRetirement">
+            <label>Retirement:</label>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">$</span>
                 </div>
-            </div>
-            <div class="col">
-                <label>Personal Debt:</label>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroup-sizing-default">$</span>
-                    </div>
-                    <input type="text" class="form-control" id="monthlyRetirement">
-                </div>
+                <input type="text" class="form-control" id="monthlyRetirement">
             </div>
         </div>
         <div class="text-center">
-            <button type="button" id="monthlyAddSavings" class="mx-auto btn btn-info w-50 mt-3">Add Savings <i class="fas fa-plus"></i></button>
-            <button type="button" id="monthlySavingsYearBudget" class="mx-auto btn btn-orange w-50 mt-3">Transfer to Yearly Budget <i class="fas fa-sign-in-alt"></i></button>
+            <button type="button" id="monthlyAddSavings" class="mx-auto btn btn-info w-25 mt-3">Add Savings
+                <i class="fas fa-plus"></i></button>
+            <button type="button" id="monthlySavingsYearBudget" class="mx-auto btn btn-orange w-25 mt-3">Transfer to Yearly
+                Budget <i class="fas fa-sign-in-alt"></i></button>
         </div>
     </div>
     <script src="js/localStorage.js"></script>
