--- a/monthlyBudget/monthly-food-and-personal-display.html
+++ b/monthlyBudget/monthly-food-and-personal-display.html
@@ -25,11 +25,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="container my-3">
-    <h3 class="unica-one">Debt & Loans</h3>
+    <div class="container my-3">
+        <h3 class="unica-one">Monthly Food & Personal</h3>
         <div class="form-row">
             <div class="col">
-                <label>Credit Cards:</label>
+                <label>Groceries/Household Purchases:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Student Loans:</label>
+                <label>Meals Out:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -49,7 +49,7 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <label>Medical Debt:</label>
+                <label>Clothing:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col">
-                <label>Tax Payments:</label>
+                <label>Entertainment:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
@@ -69,21 +69,41 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <label>Store Cards:</label>
+                <label>Pet Supplies:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
                     </div>
-                    <input type="text" class="form-control" id="monthlyRetirement">
+                    <input type="text" class="form-control" id="monthly401k">
                 </div>
             </div>
             <div class="col">
-                <label>Personal Debt:</label>
+                <label>Hobbies & Sports:</label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">$</span>
                     </div>
-                    <input type="text" class="form-control" id="monthlyRetirement">
+                    <input type="text" class="form-control" id="monthlyInvestments">
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col">
+                <label>Charitable Donations:</label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-default">$</span>
+                    </div>
+                    <input type="text" class="form-control" id="monthly401k">
+                </div>
+            </div>
+            <div class="col">
+                <label>Subscriptions:</label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-default">$</span>
+                    </div>
+                    <input type="text" class="form-control" id="monthlyInvestments">
                 </div>
             </div>
         </div>
