--- a/monthlyBudget/monthly-home-display.html
+++ b/monthlyBudget/monthly-home-display.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container my-3">
-        <h4 class="font-weight-light">HOME EXPENSES</h4>
+        <h3 class="unica-one">Home Expenses</h3>
         <div class="form-row">
             <div class="col">
                 <label>Rent:</label>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <h4 class="font-weight-light">UTILITIES</h4>
+        <h3 class="unica-one">UTILITIES</h3>
         <div class="form-row">
             <div class="col">
                 <label>Water:</label>
@@ -138,11 +138,12 @@
             </div>
         </div>
         <div class="text-center">
-            <button type="button" id="monthlyAddHomeExpenses" class="mx-auto btn btn-info w-25 mt-3">Add Savings <i class="fas fa-plus"></i></button>
-            <button type="button" id="monthlySavingsYearBudget" class="mx-auto btn btn-orange mt-3">Transfer to Yearly Budget <i class="fas fa-sign-in-alt"></i></button>
+            <button type="button" id="monthlyAddHomeExpenses" class="mx-auto btn btn-info w-50 mt-3">Add Savings <i class="fas fa-plus"></i></button>
+            <button type="button" id="monthlySavingsYearBudget" class="mx-auto btn btn-orange w-50 mt-3">Transfer to Yearly Budget <i class="fas fa-sign-in-alt"></i></button>
         </div>
-    </br>
-        <a class="text-center btn btn-orange float-right backDisplay1" data-toggle="tab" href="#tab1Content" role="tab" aria-controls="tab1Content" aria-selected="true">Back</a>
     </div>
+    <script src="js/localStorage.js"></script>
+    <script src="js/tabDisplay.js"></script>
+    <script src="js/monthlyExpenses.js"></script>
 </body>
 </html>
