--- a/monthlyBudget/monthly-one-time-display.html
+++ b/monthlyBudget/monthly-one-time-display.html
@@ -25,7 +25,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+    <div class="container my-3">
+        <h3 class="unica-one">One Time Expenses</h3>
+        <div class="text-center">
+            <button type="button" id="monthlyAddSavings" class="mx-auto btn btn-info w-50 mt-3">Add Savings <i class="fas fa-plus"></i></button>
+            <button type="button" id="monthlySavingsYearBudget" class="mx-auto btn btn-orange w-50 mt-3">Transfer to Yearly Budget <i class="fas fa-sign-in-alt"></i></button>
+        </div>
+    </div>
     <script src="js/localStorage.js"></script>
     <script src="js/tabDisplay.js"></script>
     <script src="js/monthlyExpenses.js"></script>
