--- a/yearlyBudget/2February/february-monthly-budget.html
+++ b/yearlyBudget/2February/february-monthly-budget.html
@@ -177,5 +177,8 @@
             </div>
         </div>
     </div>
+    <script src="js/localStorage.js"></script>
+    <script src="js/tabDisplay.js"></script>
+    <script src="js/monthlyExpenses.js"></script>
 </body>
 </html>
